--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
+    "axios": "^1.6.7", 
     "cosine-similarity": "^1.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
