--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "gemini-backend",
+  "name": "ollama-backend",
   "type": "module",
-  "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
-    "axios": "^1.6.7", 
-    "cosine-similarity": "^1.0.1",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
-    "fs": "^0.0.1-security",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.525.0"
-  },
-  "description": ""
+    "axios": "^1.6.8"
+  }
 }
