--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "cors": "^2.8.5",
+    "cosine-similarity": "^1.0.1",
     "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "axios": "^1.6.8"
+    "express": "^5.1.0"
   }
 }
