--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
     "cosine-similarity": "^1.0.1",
