--- a/backend/package.json
+++ b/backend/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "ollama-backend",
   "type": "module",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
   "dependencies": {
-    "axios": "^1.6.8",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
+    "axios": "^1.6.2",
     "cosine-similarity": "^1.0.1",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0"
+    "@google/generative-ai": "^0.7.0"
   }
 }
